--- a/src/PingPong/Assets/DarkTweetsPanel.xaml
+++ b/src/PingPong/Assets/DarkTweetsPanel.xaml
@@ -1,8 +1,11 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:cal="http://www.caliburnproject.org"
                     xmlns:conv="clr-namespace:PingPong.Converters"
                     xmlns:ctrl="clr-namespace:PingPong.Controls"
                     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                    xmlns:ei="http://schemas.microsoft.com/expression/2010/interactions"
+                    xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
                     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                     mc:Ignorable="d">
 
@@ -20,6 +23,48 @@
     <conv:RelativeTimeConverter x:Key="RelativeTimeConverter" />
     <conv:SourceToUriConverter x:Key="SourceToUriConverter" />
     <conv:SourceToContentConverter x:Key="SourceToContentConverter" />
+
+    <Style x:Key="DarkTweetButtonStyle" TargetType="Button">
+        <Setter Property="Width" Value="30" />
+        <Setter Property="Height" Value="20" />
+        <Setter Property="Margin" Value="2,0" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="Button">
+                    <Border x:Name="border" Background="#FF1B1B1B" CornerRadius="5">
+                        <VisualStateManager.VisualStateGroups>
+                            <VisualStateGroup x:Name="CommonStates">
+                                <VisualStateGroup.Transitions>
+                                    <VisualTransition GeneratedDuration="0:0:0.1" />
+                                </VisualStateGroup.Transitions>
+                                <VisualState x:Name="Normal" />
+                                <VisualState x:Name="MouseOver">
+                                    <Storyboard>
+                                        <ColorAnimation d:IsOptimized="True" Storyboard.TargetName="border" Storyboard.TargetProperty="(Border.Background).(SolidColorBrush.Color)" To="#FF292929" />
+                                    </Storyboard>
+                                </VisualState>
+                                <VisualState x:Name="Pressed">
+                                    <Storyboard>
+                                        <ObjectAnimationUsingKeyFrames Storyboard.TargetName="border" Storyboard.TargetProperty="(FrameworkElement.Margin)">
+                                            <DiscreteObjectKeyFrame KeyTime="0">
+                                                <DiscreteObjectKeyFrame.Value>
+                                                    <Thickness>2</Thickness>
+                                                </DiscreteObjectKeyFrame.Value>
+                                            </DiscreteObjectKeyFrame>
+                                        </ObjectAnimationUsingKeyFrames>
+                                    </Storyboard>
+                                </VisualState>
+                                <VisualState x:Name="Disabled" />
+                            </VisualStateGroup>
+                        </VisualStateManager.VisualStateGroups>
+                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" Content="{TemplateBinding Content}" />
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+        <Setter Property="Foreground" Value="#FFB1B1B1" />
+    </Style>
+
     <DataTemplate x:Key="DarkTweetDataTemplate">
         <Grid Margin="2,5,8,5" d:DataContext="{d:DesignData /SampleData/TweetSampleData.xaml}" d:DesignHeight="78" d:DesignWidth="356">
             <Grid.Resources>
@@ -37,6 +82,50 @@
                 <ColumnDefinition />
                 <ColumnDefinition />
             </Grid.ColumnDefinitions>
+
+            <VisualStateManager.CustomVisualStateManager>
+                <ei:ExtendedVisualStateManager />
+            </VisualStateManager.CustomVisualStateManager>
+            <VisualStateManager.VisualStateGroups>
+                <VisualStateGroup x:Name="CommonStates">
+                    <VisualStateGroup.Transitions>
+                        <VisualTransition GeneratedDuration="0:0:0.15" />
+                    </VisualStateGroup.Transitions>
+                    <VisualState x:Name="MouseOver">
+                        <Storyboard>
+                            <DoubleAnimation d:IsOptimized="True"
+                                             Duration="0"
+                                             Storyboard.TargetName="actions"
+                                             Storyboard.TargetProperty="(UIElement.Opacity)"
+                                             To="1" />
+                            <DoubleAnimation d:IsOptimized="True"
+                                             Duration="0"
+                                             Storyboard.TargetName="viaLink"
+                                             Storyboard.TargetProperty="(UIElement.Opacity)"
+                                             To="0" />
+                            <DoubleAnimation d:IsOptimized="True"
+                                             Duration="0"
+                                             Storyboard.TargetName="actions"
+                                             Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.TranslateY)"
+                                             To="0">
+                                <DoubleAnimation.EasingFunction>
+                                    <ExponentialEase EasingMode="EaseInOut" />
+                                </DoubleAnimation.EasingFunction>
+                            </DoubleAnimation>
+                        </Storyboard>
+                    </VisualState>
+                    <VisualState x:Name="Normal" />
+                </VisualStateGroup>
+            </VisualStateManager.VisualStateGroups>
+
+            <i:Interaction.Triggers>
+                <i:EventTrigger EventName="MouseEnter">
+                    <ei:GoToStateAction StateName="MouseOver" />
+                </i:EventTrigger>
+                <i:EventTrigger EventName="MouseLeave">
+                    <ei:GoToStateAction StateName="Normal" />
+                </i:EventTrigger>
+            </i:Interaction.Triggers>
 
             <Grid Margin="0,5,0,0" VerticalAlignment="Top">
                 <Border Background="#55000000" CornerRadius="4">
@@ -73,7 +162,6 @@
                 </Border>
             </Grid>
 
-
             <Grid Grid.Column="1" Margin="-10,-3,0,0" HorizontalAlignment="Left" VerticalAlignment="Top">
                 <Border Background="#55000000" CornerRadius="5">
                     <Border.RenderTransform>
@@ -91,7 +179,8 @@
                 </Border>
             </Grid>
 
-            <HyperlinkButton Grid.Row="0"
+            <HyperlinkButton x:Name="viaLink"
+                             Grid.Row="0"
                              Grid.Column="1"
                              Grid.ColumnSpan="2"
                              Margin="10,0,0,0"
@@ -110,6 +199,46 @@
                        FontSize="10"
                        Foreground="{StaticResource DateTextBrush}"
                        Text="{Binding CreatedAt, Converter={StaticResource RelativeTimeConverter}}" />
+
+            <Grid x:Name="actions"
+                  Grid.Column="1"
+                  Grid.ColumnSpan="2"
+                  Margin="10,0,0,-3"
+                  Opacity="0"
+                  RenderTransformOrigin="0.5,0.5">
+                <Grid.RenderTransform>
+                    <CompositeTransform TranslateY="30" />
+                </Grid.RenderTransform>
+                <StackPanel VerticalAlignment="Bottom" cal:Bind.Model="{StaticResource router}" Orientation="Horizontal">
+                    <Button Content="R" Style="{StaticResource DarkTweetButtonStyle}">
+                        <i:Interaction.Triggers>
+                            <i:EventTrigger EventName="Click">
+                                <cal:ActionMessage MethodName="Reply">
+                                    <cal:Parameter Value="{Binding DataContext, ElementName=actions}" />
+                                </cal:ActionMessage>
+                            </i:EventTrigger>
+                        </i:Interaction.Triggers>
+                    </Button>
+                    <Button Content="RT" Style="{StaticResource DarkTweetButtonStyle}">
+                        <i:Interaction.Triggers>
+                            <i:EventTrigger EventName="Click">
+                                <cal:ActionMessage MethodName="Retweet">
+                                    <cal:Parameter Value="{Binding DataContext, ElementName=actions}" />
+                                </cal:ActionMessage>
+                            </i:EventTrigger>
+                        </i:Interaction.Triggers>
+                    </Button>
+                    <Button Content="Q" Style="{StaticResource DarkTweetButtonStyle}">
+                        <i:Interaction.Triggers>
+                            <i:EventTrigger EventName="Click">
+                                <cal:ActionMessage MethodName="Quote">
+                                    <cal:Parameter Value="{Binding DataContext, ElementName=actions}" />
+                                </cal:ActionMessage>
+                            </i:EventTrigger>
+                        </i:Interaction.Triggers>
+                    </Button>
+                </StackPanel>
+            </Grid>
         </Grid>
     </DataTemplate>
     <Style x:Key="DarkTweetsPanel" TargetType="ItemsControl">
