--- a/src/PingPong/Assets/DarkTweetsPanel.xaml
+++ b/src/PingPong/Assets/DarkTweetsPanel.xaml
@@ -24,6 +24,7 @@
     <conv:RelativeTimeConverter x:Key="RelativeTimeConverter" />
     <conv:SourceToUriConverter x:Key="SourceToUriConverter" />
     <conv:SourceToContentConverter x:Key="SourceToContentConverter" />
+    <cal:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
 
     <Style x:Key="DarkTweetButtonStyle" TargetType="Button">
         <Setter Property="Width" Value="30" />
@@ -319,7 +320,8 @@
                                 Margin="0,0,14,0"
                                 HorizontalAlignment="Right"
                                 Foreground="Gray"
-                                Style="{StaticResource CloseButtonStyle}" />
+                                Style="{StaticResource CloseButtonStyle}"
+                                Visibility="{Binding CanClose, Converter={StaticResource BooleanToVisibilityConverter}}" />
                     </Grid>
                 </ControlTemplate>
             </Setter.Value>
