--- a/src/PingPong/StatusView.xaml
+++ b/src/PingPong/StatusView.xaml
@@ -1,9 +1,11 @@
 ﻿<UserControl x:Class="PingPong.StatusView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:b="clr-namespace:PingPong.Behaviors"
              xmlns:cal="http://www.caliburnproject.org"
              xmlns:conv="clr-namespace:PingPong.Converters"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d">
     <UserControl.Resources>
@@ -32,11 +34,16 @@
                      Background="Transparent"
                      BorderThickness="0"
                      cal:Message.Attach="[Event TextChanged] = [OnStatusTextBoxChanged($source, $eventArgs)];                                                      [Event TextInput] = [OnStatusTextBoxTextInput($eventArgs)]"
+                     CaretBrush="White"
                      FontFamily="{StaticResource DefaultFontFamily}"
                      FontSize="14"
                      Foreground="#FF8EBCE7"
                      Text="{Binding StatusText, Mode=TwoWay}"
-                     TextWrapping="Wrap" />
+                     TextWrapping="Wrap">
+                <i:Interaction.Behaviors>
+                    <b:FocusOnLoadBehavior />
+                </i:Interaction.Behaviors>
+            </TextBox>
         </Grid>
     </Border>
 </UserControl>
